Resolves: tdf#108643 don't restore orig size on first chart activate

Change-Id: Ibe51eb81ea1b0874fc1a9018871f07c9af38e8d2